# WeightedSampling.torch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  idea.md  pyproject.toml
.github/workflows/: test.yml
benchmarks/: gaussian_ssm.py  mh_linear_regression.py  performance_log.md
benchmarks/julia_comparison/: README.md  eight_schools.jl  eight_schools.py  results.txt  run_benchmarks.sh  run_comparison.py  ssm.jl  ssm.py
examples/: discrete_bayes_net.py  importance_sampling_test.py  linear_regression.py  mh_move.py  random_walk.py  simple_test.py  state_space_model.py  verify_log_evidence.py
src/weighted_sampling/: __init__.py  context.py  discrete.py  distributions.py  functional.py  proposals.py
src/weighted_sampling.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_importance_sampling.py  test_linear_regression.py  test_random_walk.py  test_simple.py
